--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ h1, h2, h3, h4 {
         margin-bottom: 68px;
     }
 
-    .promo__option--diagram figcaption {
+    .figcaption {
         max-width: 123px;
     }
 
