--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,17 @@ h1, h2, h3, h4 {
     line-height: 20px;
 }
 
+.fontChecker {
+    position: fixed;
+    z-index: -1;
+    font-size: 100px;
+    opacity: 0;
+}
+
+.fontChecker::before {
+    content: 'sfire';
+}
+
 @media (max-width: 767px) {
     .promo__title {
         margin-bottom: 12px;
