--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ h1, h2, h3, h4 {
 .promo__picture img {
     border: 9px solid #000000;
     border-radius: 32px;
-    animation: vibrate 2s linear infinite;
+    animation: vibrate 6s linear infinite;
 }
 
 .promo__footer {
@@ -456,7 +456,7 @@ h1, h2, h3, h4 {
 }
 
 @keyframes vibrate {
-    0%, 100% {
+    0%, 95%, 100% {
         transform: translateX(0);
     }
     10%, 30% {
