--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,6 @@ h1, h2, h3, h4 {
 
 .promo__option img {
     margin-bottom: 4px;
-
     vertical-align: bottom;
 }
 
@@ -255,7 +254,7 @@ h1, h2, h3, h4 {
 .promo__picture img {
     border: 9px solid #000000;
     border-radius: 32px;
-    animation: vibrate 6s linear infinite;
+    animation: vibrate 2s linear infinite;
 }
 
 .promo__footer {
@@ -456,7 +455,7 @@ h1, h2, h3, h4 {
 }
 
 @keyframes vibrate {
-    0%, 95%, 100% {
+    0%, 100% {
         transform: translateX(0);
     }
     10%, 30% {
