--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,8 @@ h1, h2, h3, h4 {
         width: 32px;
         height: 32px;
         animation: vibrate 2s linear infinite;
+        animation-fill-mode: forwards;
+        animation-delay: 5s;
     }
 
     .promo__header {
