--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,7 @@ h1, h2, h3, h4 {
         width: 32px;
         height: 32px;
         animation: vibrate 2s linear infinite;
+        animation-delay: 1s;
     }
 
     .promo__header {
